--- a/index.html
+++ b/index.html
@@ -25,15 +25,22 @@
     </div>
 
     <div id="result-container">
-      <h2>Results</h2>
       <ul id="results"></ul>
-      <button id="restart-btn">Restart Quiz</button>
       <button id="final-btn">Final Result</button>
-      <div id="feedback-container">
-        <h2>Feedback:</h2>
-        <textarea id="feedback-textarea" rows="4" placeholder="Enter your feedback here"></textarea>
-        <button id="submit-feedback-btn">Submit Feedback</button></div>
+      <button id="restart-btn">Restart</button>      
     </div>
+
+    <div id="scorecard-container">
+        <h2>Scorecard</h2>
+        <ul id="scorecard"></ul>
+        <p id="final-score"></p>
+        <div id="feedback-container">
+            <h2>Feedback</h2>
+            <textarea id="feedback-textarea" rows="4" placeholder="Enter your feedback here"></textarea>
+            <button id="submit-feedback-btn">Submit Feedback</button>
+        </div>
+    </div>
+    
   </div>
   <script src="script.js"></script>
 </body>
